# heritage-builder

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bundle.sh  rustfmt.toml  web.sh
crates/common/: Cargo.toml
crates/common/src/: callback.rs  constants.rs  coords.rs  fixed_string.rs  hash.rs  lib.rs  mem.rs  time.rs
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  engine.rs  lib.rs
crates/engine/src/app/: input.rs  mod.rs
crates/engine/src/app/glfw/: input.rs  mod.rs  window.rs
crates/engine/src/app/platform/: macos.rs
crates/engine/src/app/winit/: input.rs  mod.rs
crates/engine/src/debug/: mod.rs  sound.rs  texture.rs  ui_text.rs  update_timer.rs
crates/engine/src/file_sys/: desktop.rs  mod.rs  paths.rs  web.rs
crates/engine/src/log/: desktop.rs  mod.rs  web.rs
crates/engine/src/platform/: mod.rs
crates/engine/src/platform/desktop/: crash_report.rs  mod.rs
crates/engine/src/platform/web/: crash_report.rs  libc.rs  mod.rs
crates/engine/src/render/: debug.rs  mod.rs  texture.rs
crates/engine/src/render/opengl/: batch.rs  buffer.rs  context.rs  mod.rs  shader.rs  target.rs  texture.rs  vertex.rs
crates/engine/src/render/wgpu/: batch.rs  mod.rs  pipeline.rs  target.rs  texture.rs  vertex.rs
crates/engine/src/runner/: desktop.rs  mod.rs  web.rs
crates/engine/src/save/: mod.rs
crates/engine/src/save/storage/: desktop.rs  mod.rs  web.rs
crates/engine/src/sound/: mod.rs
crates/engine/src/sound/kira/: mod.rs
crates/engine/src/sound/web_audio/: mod.rs
crates/engine/src/ui/: debug_ui.rs  internal.rs  mod.rs  renderer.rs  sound.rs  tests.rs  text.rs  widgets.rs
crates/engine/src/utils/: mod.rs
crates/game/: Cargo.toml
crates/game/src/: camera.rs  cheats.rs  config.rs  constants.rs  game_loop.rs  lib.rs  save_context.rs  session.rs  ui_context.rs  undo_redo.rs
crates/game/src/building/: config.rs  debug.rs  house.rs  house_upgrade.rs  mod.rs  producer.rs  service.rs  storage.rs
crates/game/src/camera/: mod.rs
crates/game/src/campaign/: config.rs  mod.rs
crates/game/src/debug/: building.rs  game_object_debug.rs  inspector.rs  log_viewer.rs  misc.rs  mod.rs  palette.rs  popups.rs  preset_maps.rs  prop.rs  settings.rs  sim.rs  systems.rs  unit.rs  utils.rs  world.rs
crates/game/src/menu/: mod.rs
crates/game/src/menu/dialog/: about.rs  campaign_complete.rs  home.rs  load_save.rs  main_game.rs  mission_complete.rs  mod.rs  new_game.rs
crates/game/src/menu/home/: mod.rs
crates/game/src/menu/in_game/: bars.rs  mod.rs  palette.rs
crates/game/src/pathfind/: mod.rs  tests.rs
crates/game/src/prop/: config.rs  mod.rs
crates/game/src/sim/: commands.rs  context.rs  mod.rs  resources.rs
crates/game/src/system/: ambient_effects.rs  ambient_music.rs  ambient_sounds.rs  campaign.rs  mod.rs  settlers.rs
crates/game/src/tile/: atlas.rs  minimap.rs  mod.rs  placement.rs  rendering.rs  road.rs  selection.rs  sets.rs  water.rs
crates/game/src/unit/: anim.rs  config.rs  debug.rs  harvester.rs  inventory.rs  mod.rs  navigation.rs  patrol.rs  runner.rs  task.rs
crates/game/src/unit/task/: common.rs  deliver.rs  despawn.rs  fetch.rs  follow_path.rs  harvest.rs  manager.rs  mod.rs  patrol.rs  settler.rs  state_machine.rs
crates/game/src/world/: debug.rs  mod.rs  object.rs  stats.rs
crates/game/tests/: campaign.rs  house_consumption.rs  search_graph.rs  sim_cmds.rs  unit_tasks.rs
crates/game/tests/test_utils/: mod.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs
game/: Cargo.toml
game/src/: app.rs  engine.rs  file_sys.rs  log.rs  main.rs  platform.rs  render.rs  runner.rs  sound.rs  ui.rs
game/src/app/: input.rs  mod.rs
game/src/app/glfw/: input.rs  mod.rs  window.rs
game/src/app/platform/: macos.rs  mod.rs
game/src/app/winit/: input.rs  mod.rs  window.rs
game/src/camera/: mod.rs
game/src/debug/: inspector.rs  log_viewer.rs  mod.rs  palette.rs  popups.rs  settings.rs  utils.rs
game/src/engine/: config.rs  mod.rs  time.rs
game/src/file_sys/: desktop.rs  mod.rs  paths.rs  web.rs
game/src/game/: cheats.rs  config.rs  constants.rs  core.rs  mod.rs  save.rs  save_context.rs  session.rs  ui_context.rs  undo_redo.rs
game/src/game/building/: config.rs  house.rs  house_upgrade.rs  mod.rs  producer.rs  service.rs  storage.rs  upgrade_helpers.rs
game/src/game/menu/: bar.rs  button.rs  home.rs  hud.rs  mod.rs  modal.rs  palette.rs  widgets.rs
game/src/game/prop/: config.rs  mod.rs
game/src/game/sim/: commands.rs  context.rs  debug.rs  mod.rs  object.rs  resources.rs  world.rs
game/src/game/system/: ambient_effects.rs  ambient_music.rs  ambient_sounds.rs  mod.rs  settlers.rs
game/src/game/unit/: anim.rs  config.rs  debug.rs  harvester.rs  inventory.rs  mod.rs  navigation.rs  patrol.rs  runner.rs  task.rs
game/src/game/world/: debug.rs  mod.rs  object.rs  stats.rs
game/src/imgui_ui/: mod.rs
game/src/imgui_ui/opengl/: mod.rs
game/src/log/: desktop.rs  mod.rs
game/src/pathfind/: mod.rs  tests.rs
game/src/platform/: mod.rs
game/src/platform/desktop/: mod.rs
game/src/platform/web/: crash_report.rs  mod.rs
game/src/render/: debug.rs  mod.rs  texture.rs
game/src/render/opengl/: batch.rs  buffer.rs  context.rs  mod.rs  shader.rs  system.rs  target.rs  texture.rs  vertex.rs
game/src/render/wgpu/: batch.rs  mod.rs  pipeline.rs  system-old.rs  system.rs  target.rs  texture.rs  vertex.rs
game/src/runner/: desktop.rs  mod.rs  web.rs
game/src/save/: mod.rs  storage.rs
game/src/save/storage/: desktop.rs  mod.rs  web.rs
game/src/sound/: mod.rs
game/src/sound/kira/: mod.rs
game/src/sound/web_audio/: mod.rs
game/src/tile/: atlas.rs  camera.rs  map.rs  minimap.rs  mod.rs  placement.rs  rendering.rs  road.rs  selection.rs  sets.rs  water.rs
game/src/ui/: helpers.rs  internal.rs  mod.rs  renderer.rs  sound.rs  tests.rs  text.rs  widgets.rs
game/src/ui/opengl/: mod.rs
game/src/utils/: callback.rs  coords.rs  crash_report.rs  file_sys.rs  fixed_string.rs  hash.rs  mem.rs  mod.rs  paths.rs  platform.rs  time.rs
game/src/web/: asset_cache.rs  libc.rs  mod.rs
(+165 files in other folders)
