[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/engine",
    "crates/game",
    "crates/launcher",
    "crates/proc_macros",
    "crates/tools/bundler",
    "crates/tools/web-builder",
]

# -------------------------
#   Ignored Clippy lints
# -------------------------

[workspace.lints.clippy]
new_without_default = "allow"
collapsible_if = "allow"
