[package]
name = "CitySim"
version = "0.1.0"
edition = "2024"

[dependencies]
proc_macros = { path = "../proc_macros" }
gl = "0.14.0"
glfw = "0.59.0"
imgui = "0.12"
imgui-opengl-renderer = { git = "https://github.com/glampert/rust-imgui-opengl-renderer" }
texture_packer = { git = "https://github.com/glampert/texture_packer" }
image = "0.25.6"
bitflags = { version = "2.9.0", features = ["serde"] }
paste = "1.0.15"
libc = "0.2"
arrayvec = { version = "0.7.6", features = ["serde"] }
smallvec = { version = "1.15.0", features = ["serde", "const_new"] }
small-map = "0.1.3"
priority-queue = "2.5.0"
heapless = "0.9.1"
bitvec = { version = "1.0.1", features = ["serde"] }
slab = { version = "0.4.9", features = ["serde"] }
strum = "0.27"
strum_macros = "0.27"
num_enum = "0.7.3"
enum_dispatch = "0.3.13"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
rand_pcg = { version = "0.9.0", features = ["serde"] }
