[package]
name    = "engine"
version = "0.1.0"
edition = "2024"

# ----------------------------
#   Feature Targets
# ----------------------------

[features]
default = ["desktop"]
desktop = [
    "common/desktop",
    "dep:gl",
    "dep:glfw",
    "dep:glutin",
    "dep:glutin-winit",
    "dep:kira",
    "dep:libc",
    "dep:backtrace",
    "dep:pollster",
]
web = [
    "common/web",
    "dep:web-time",
    "dep:web-sys",
    "dep:js-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook",
]

# ----------------------------
#   Shared Dependencies
# ----------------------------

[dependencies]
common         = { path = "../common", default-features = false }
proc_macros    = { path = "../proc_macros" }
pollster       = { version = "0.4",  optional = true }
bytemuck       = { version = "1.21", features = ["derive"] }
wgpu           = "28.0.0"
winit          = "0.30.13"
imgui          = "0.12"
web-time       = { version = "1", optional = true }
texture_packer = { git = "https://github.com/glampert/texture_packer", rev = "980824d1" }
image          = "0.25.6"
paste          = "1.0.15"
bitflags       = { version = "2.9.0", features = ["serde"] }
strum          = { version = "0.27",  features = ["derive"] }
num_enum       = "0.7.3"
enum_dispatch  = "0.3.13"
arrayvec       = { version = "0.7.6",   features = ["serde"] }
smallvec       = { version = "1.15.0",  features = ["serde", "const_new"] }
slab           = { version = "0.4.9",   features = ["serde"] }
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = "1.0.149"

# ----------------------------
#   Desktop-only (optional)
# ----------------------------

gl           = { version = "0.14.0", optional = true }
glfw         = { version = "0.59.0", optional = true }
glutin       = { version = "0.32",   optional = true }
glutin-winit = { version = "0.5",    optional = true }
kira         = { version = "0.11.0", optional = true }
libc         = { version = "0.2",    optional = true }
backtrace    = { version = "0.3.76", optional = true }

# ----------------------------
#   Web/WASM-only (optional)
# ----------------------------

wasm-bindgen             = { version = "0.2", optional = true }
wasm-bindgen-futures     = { version = "0.4", optional = true }
js-sys                   = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version  = "0.3"
optional = true
features = [
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "HtmlElement",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    "Performance",
    "Storage",
    "Response",
    "console",
    "AudioContext",
    "AudioContextState",
    "AudioContextOptions",
    "AudioDestinationNode",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioNode",
    "AudioParam",
    "AudioScheduledSourceNode",
    "GainNode",
    "GainOptions",
    "StereoPannerNode",
    "StereoPannerOptions",
]

# ----------------------------
#   MacOS-specific crates
# ----------------------------

[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.5"
objc2-foundation = { version = "0.2", features = ["NSThread"] }
objc2-app-kit    = { version = "0.2", features = ["NSApplication", "NSResponder", "NSWindow"] }
