[package]
name    = "game"
version = "0.1.0"
edition = "2024"

# ----------------------------
#   Feature Targets
# ----------------------------

[features]
default = ["desktop"]
desktop = [
    "engine/desktop",
    "dep:rayon",
]
web = [
    "engine/web",
    "getrandom/wasm_js",
]

# ----------------------------
#   Dependencies
# ----------------------------

[dependencies]
common         = { path = "../common", default-features = false }
engine         = { path = "../engine", default-features = false }
proc_macros    = { path = "../../proc_macros" }

# Game-specific deps:
bitflags       = { version = "2.9.0",   features = ["serde"] }
strum          = { version = "0.27",    features = ["derive"] }
num_enum       = "0.7.3"
enum_dispatch  = "0.3.13"
arrayvec       = { version = "0.7.6",   features = ["serde"] }
smallvec       = { version = "1.15.0",  features = ["serde", "const_new"] }
small-map      = "0.1.3"
priority-queue = "2.5.0"
bitvec         = { version = "1.0.1",   features = ["serde"] }
slab           = { version = "0.4.9",   features = ["serde"] }
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = "1.0.149"
rand           = "0.9.1"
rand_pcg       = { version = "0.9.0",   features = ["serde"] }
getrandom      = "0.3"
paste          = "1.0.15"
image          = "0.25.6"
imgui          = "0.12"
texture_packer = { git = "https://github.com/glampert/texture_packer", rev = "980824d1" }

# Desktop-only:
rayon          = { version = "1.11.0", optional = true }
