[package]
name    = "HeritageBuilder"
authors = ["Core System"]
version = "0.1.0"
edition = "2024"

# ----------------------------
#    Feature Targets
# ----------------------------

# Desktop Target (default):
#  - MacOS/PC/Linux/etc
#
# Web Target:
#  - wasm32 web browser
#
# Build Web wasm32:
#  `cargo run -p web-builder`             // debug build
#  `cargo run -p web-builder -- release`  // release build + wasm-opt
# Serve locally:
#  `cd web && python3 -m http.server 8080`
# Or run:
#  `./web.sh --build --serve`

[features]
default = ["desktop"]
desktop = [
    "common/desktop",
    "engine/desktop",
    "game/desktop",
]
web = [
    "common/web",
    "engine/web",
    "game/web",
]

# ----------------------------
#    Dependencies
# ----------------------------

[dependencies]
common = { path = "../common", default-features = false }
engine = { path = "../engine", default-features = false }
game   = { path = "../game",   default-features = false }

# ----------------------------
#    Bundle/Package Builds
# ----------------------------

# Invoke these from the `crates/launcher` directory after cargo build:
#
#  `cargo run -p bundler -- debug`
#  `cargo run -p bundler -- release`
#
# To build and produce a package (e.g., `Heritage Builder.app` on MacOS).
#
# Running these will invoke our bundler tool. It requires `cargo bundle`
# to be already installed (run `cargo install cargo-bundle` first).

[package.metadata.bundle]
name              = "Heritage Builder"
identifier        = "com.coresystem.heritagebuilder"
icon              = ["../../assets/ui/icons/app_icon.png"]
version           = "0.1.0" # NOTE: Keep in sync with [package] version
category          = "Game"
resources         = ["assets"]
copyright         = "Copyright (c) Core System 2026. All rights reserved."
short_description = "A Classic City Builder Game"
long_description  = "Build the world heritage!"
